--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,12 @@
     font-size: 80%;
     color: black;
 }
+
+.nav-style {
+    background-color: #212f53;
+}
+
+body {
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
